WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25158
hit testing doesn't work right in some cases involving anonymous blocks
https://bugs.webkit.org/show_bug.cgi?id=25158
Summary
hit testing doesn't work right in some cases involving anonymous blocks
Darin Adler
Reported
2009-04-13 13:59:23 PDT
Some broken hit testing cases were discovered due to a problem caused in Apple's Mail application. Patch including test cases is forthcoming.
Attachments
patch
(13.34 KB, patch)
2009-04-13 14:07 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-04-13 14:07:28 PDT
Created
attachment 29439
[details]
patch
Darin Adler
Comment 2
2009-04-13 15:23:30 PDT
http://trac.webkit.org/changeset/42467
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug