WebCore:

2009-04-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 25158: hit testing doesn't work right in some cases involving anonymous blocks
        https://bugs.webkit.org/show_bug.cgi?id=25158
        rdar://problem/6769693

        Test: editing/selection/click-after-nested-block.html

        * rendering/RenderBlock.cpp:
        (WebCore::isChildHitTestCandidate): Added. Helper so the two loops in positionForPoint
        can share code.
        (WebCore::RenderBlock::positionForPoint): Removed unneeded special case for first
        child box. Changed special case for last child box to propertly handle the various
        types of child box that are not hit test candidates (the same ones already handled
        by the hit test loop below), adding in a loop so we find the last candidate.

LayoutTests:

2009-04-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 25158: hit testing doesn't work right in some cases involving anonymous blocks
        https://bugs.webkit.org/show_bug.cgi?id=25158
        rdar://problem/6769693

        * editing/selection/click-after-nested-block-expected.txt: Added.
        * editing/selection/click-after-nested-block.html: Added.

        * fast/events/pointer-events-expected.txt: Updated since this is now a plain-text test.
        * fast/events/pointer-events.html: Changed this to a plain-text test, because the old
        results reflected a difference in hit testing behavior that this test was not intended
        to exercise and it's better to have the test be more cross-platform. Also removed
        unneeded use of waitUntilDone.

        * fast/js/finally-codegen-failure.html: Replaced with standard wrapper created by
        running the make-js-test-wrappers script. If we want to include type and charset
        attributes in the script elements, we can change make-js-test-wrappers to do that
        for all tests at some point.
        * fast/js/function-apply-aliased.html: Ditto.
        * fast/js/function-call-aliased.html: Ditto.



Canonical link: https://commits.webkit.org/34521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42467 268f45cc-cd09-0410-ab3c-d52691b4dbfc